# bilibili-api-rs

./: Cargo.toml  Readme.md  how_to_do.md  todo.md
bili_core/: Cargo.toml
bili_core/bili_core_derive/: Cargo.toml
bili_core/bili_core_derive/src/: lib.rs
bili_core/src/: lib.rs  traits.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: common.rs  error.rs  lib.rs  session.rs  traits.rs  utils.rs
src/login/: action.rs  info.rs  mod.rs
src/login/action/: captcha.rs  password.rs
src/login/info/: coin.rs  nav.rs  stat.rs
src/model/: mod.rs  response.rs
src/model/live/: info.rs  stream.rs
src/model/login/: captcha.rs  mod.rs  password.rs
src/model/sign/: mod.rs  ticket.rs  wbi.rs
src/model/user/: account.rs  contribute.rs  exp.rs  follow.rs  mod.rs  money.rs  nameplate.rs  nav.rs  notice.rs  official.rs  pendant.rs  safe.rs  vip.rs
src/model/video/: archives.rs  format.rs  mod.rs  stream.rs  zone.rs
src/model/video/action/: coin.rs  collect.rs  mod.rs  share.rs
src/model/video/info/: cids.rs  desc.rs  mod.rs  state.rs  subtitle.rs  view.rs  zone.rs
src/model/video/stream/: format.rs  mod.rs  view.rs
src/query/: mod.rs
src/query/live/: info.rs  mod.rs  stream.rs
src/query/login/: captcha.rs  mod.rs  password.rs
src/query/sign/: mod.rs  ticket.rs
src/query/user/: account.rs  contribute.rs  exp.rs  follow.rs  mod.rs  money.rs  nav.rs  safe.rs  vip.rs
src/query/video/: archives.rs  mod.rs  stream.rs
src/query/video/action/: coin.rs  collect.rs  like.rs  mod.rs  share.rs
src/query/video/info/: cids.rs  desc.rs  mod.rs  view.rs
src/service/: login.rs  mod.rs  session.rs  sign.rs
src/service/user/: exp.rs  mod.rs  nav.rs
src/service/video/: action.rs  info.rs  mod.rs  stream.rs
src/sign/: mod.rs  wbi.rs
src/user/: space.rs
src/user/space/: contribute.rs
src/video/: collection.rs  info.rs  mod.rs  stat.rs  stream.rs  zone.rs
src/video/collection/: archives.rs  series.rs
src/video/info/: archive_desc.rs  player_pagelist.rs  video_info.rs  video_info_detail.rs  view.rs  view_detail.rs
tests/: tests.toml  video.rs
