[package]
name = "bilibili-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
md5 = "0.7.0"
rand = "0.8.5"
rsa = "0.9.7"
hmac = "0.12.1"
sha2 = "0.10.8"

serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_qs = "0.13.0"
serde_repr = "0.1.19"
thiserror = "2.0.8"

tokio = { version = "1.42.0", optional = true, features = ["full"] }
reqwest = { version = "0.12.9", optional = true, features = [
    "cookies",
    "json",
    "stream",
] }
webbrowser = { version = "1.0.3", optional = true }
futures-util = {version = "0.3.31",optional = true }
hex = "0.4.3"
serde-aux = "4.5.0"

[features]
# default = []
default = ["session"]
# default = ["session", "manual"]
session = ["reqwest", "tokio","futures-util"]
manual = ["webbrowser"]
